--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,7 +10,6 @@
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
   <!-- include source files here... -->
-    <script type="text/javascript" src="src/Entity.js"></script>
     <script type="text/javascript" src="src/Property.js"></script>
     <script type="text/javascript" src="src/ObjectManager.js"></script>
     <script type="text/javascript" src="src/Proxy.js"></script>
@@ -18,6 +17,8 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
     <script type="text/javascript" src="spec/ObjectManagerSpec.js"></script>
+    <script type="text/javascript" src="spec/PropertySpec.js"></script>
+    <script type="text/javascript" src="spec/ProxySpec.js"></script>
     <script type="text/javascript" src="spec/fixtures/ProjectType.js"></script>
     <script type="text/javascript" src="spec/fixtures/Project.js"></script>
 
