use gulp to prepare the HTML for testing

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -9,18 +9,8 @@
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.3.0/jasmine-html.js"></script>
 
-  <!-- include source files here... -->
-    <script type="text/javascript" src="src/Property.js"></script>
-    <script type="text/javascript" src="src/ObjectManager.js"></script>
-    <script type="text/javascript" src="src/Proxy.js"></script>
-
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/SpecHelper.js"></script>
-    <script type="text/javascript" src="spec/ObjectManagerSpec.js"></script>
-    <script type="text/javascript" src="spec/PropertySpec.js"></script>
-    <script type="text/javascript" src="spec/ProxySpec.js"></script>
-    <script type="text/javascript" src="spec/fixtures/ProjectType.js"></script>
-    <script type="text/javascript" src="spec/fixtures/Project.js"></script>
+  <!-- inject:js -->
+  <!-- endinject -->
 
   <script type="text/javascript">
     (function() {
